[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/GUI/cent_1.png" type="Texture" id=2]
[ext_resource path="res://GUI/CoinSelector.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/GUI/plus.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/GUI/minus.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/click4.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/click5.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="CoinSelector" type="MarginContainer"]
margin_right = 372.0
margin_bottom = 60.0
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 10.0
margin_right = 367.0
margin_bottom = 50.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 34.0
margin_right = 74.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameCont" type="MarginContainer" parent="HBoxContainer"]
margin_left = 78.0
margin_right = 212.0
margin_bottom = 40.0
custom_constants/margin_right = 15
custom_constants/margin_left = 15

[node name="CoinName" type="Label" parent="HBoxContainer/NameCont"]
margin_left = 15.0
margin_top = 11.0
margin_right = 119.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "1 Centesimo"
align = 1

[node name="MinusButton" type="Button" parent="HBoxContainer"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 40.0
icon = ExtResource( 5 )

[node name="CountCont" type="MarginContainer" parent="HBoxContainer"]
margin_left = 252.0
margin_right = 292.0
margin_bottom = 40.0
custom_constants/margin_right = 15
custom_constants/margin_left = 15

[node name="CountLabel" type="Label" parent="HBoxContainer/CountCont"]
margin_left = 15.0
margin_top = 11.0
margin_right = 25.0
margin_bottom = 29.0
rect_min_size = Vector2( 10, 18 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="PlusButton" type="Button" parent="HBoxContainer"]
margin_left = 296.0
margin_right = 328.0
margin_bottom = 40.0
custom_constants/hseparation = 0
icon = ExtResource( 4 )

[node name="AudioMinus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -0.5

[node name="AudioPlus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -0.5
[connection signal="pressed" from="HBoxContainer/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PlusButton" to="." method="_on_PlusButton_pressed"]
